# csv_parsing

./: .gitignore  README.md  pyproject.toml
bank_csv_normalizer/: __init__.py  cli.py  convert.py  detect.py  report.py
bank_csv_normalizer/normalize/: __init__.py  amounts.py  dates.py  io.py  text.py
bank_csv_normalizer/profiles/: __init__.py  base.py  discount_bank_visa_v1.py  israeli_cards_aggregate_v1.py  israeli_credit_card_v1.py
