[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-csv-normalizer"
version = "0.1.0"
description = "Normalize bank CSV exports into a canonical UTF-8 CSV schema for ingestion."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["bank_csv_normalizer*"]
